# AzureEnumRBAC

./: LICENSE  README.md  pyproject.toml
AzureEnumRBAC/: AzureEnumRBAC.py  __init__.py  a_login_or_install.py  b_get_subscriptions.py  c_enumerate_resources.py  d_enumerate_roles.py  e_enumerate_assignments.py  f_enumerate_group_members.py  g_combine_rbac_users.py  h_get_user_personal_data.py  helpers.py  i_combine_identities.py  j_role_matrix.py  k_user_matrix.py  l_bubble_chart_users.py  m_bubble_chart_roles.py
